Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26955

FakeVim: Substitute command does not support backslashes in pattern

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 7.0.0-beta1
    • Qt Creator 7.0.0-beta1
    • FakeVim
    • None
    • 5af00873cf (qt-creator/qt-creator/7.0) 5af00873cf (qt-creator/qt-creator/master) 5af00873cf (qt-creator/tqtc-qt-creator/master)

    Description

      The substitute command does not support patterns with backslashes. For example:

      running command "s#\\#/" on line "abc\def" does nothing. Expected: "abc/def".
      

       

      The attached patch will add support vor this. Tests included in patch.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            pulp Jochen Baier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes